upgrading git + worktree completion

--- a/git/gitconfig.template
+++ b/git/gitconfig.template
@@ -1,6 +1,6 @@
 [user]
     name = iheitlager
-    email = ilja@heitlager.com
+    email = iheitlager@schubergphils.com
 [color]
     diff = auto
     status = auto
