--- a/git/gitconfig.template
+++ b/git/gitconfig.template
@@ -1,16 +1,22 @@
 [user]
     name = iheitlager
     email = ilja@heitlager.com
+    signingkey = xxxxxx
+
 [color]
     diff = auto
     status = auto
     branch = auto
     ui = true
+
 [core]
     excludesfile = ~/.gitignore
     editor = $EDITOR
+    pager = delta
+
 [push]
     default = simple
+
 # Taken from https://victorzhou.com/blog/git-aliases/
 [alias]
     s = status
@@ -26,3 +32,38 @@
     cm = commit -m
 # https://git-scm.com/book/ms/v2/Git-Basics-Git-Aliases
     unstage = reset HEAD --
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true
+    side-by-side = true
+    line-numbers = true
+    syntax-theme = Dracula
+    plus-style = "syntax #012800"
+    minus-style = "syntax #340001"
+    line-numbers-minus-style = "#444444"
+    line-numbers-plus-style = "#444444" 
+    line-numbers-zero-style = "#444444"
+    file-style = "bold yellow ul"
+    file-decoration-style = "none"
+    hunk-header-decoration-style = "cyan box"
+    hunk-header-file-style = "red"
+    hunk-header-line-number-style = "#067a00"
+    hunk-header-style = "file line-number syntax"
+
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
+
+[gpg]
+  format = ssh
+
+[gpg "ssh"]
+  program = "/Applications/1Password.app/Contents/MacOS/op-ssh-sign"
+
+[commit]
+  gpgsign = true
