--- a/tmux/config/tmux.conf
+++ b/tmux/config/tmux.conf
@@ -2,7 +2,20 @@
 set -g mouse on
 
 # Start windows at 0 (default)
-set -g base-index 0
+#set -g base-index 0
+# Start numbering at 1 (matches keyboard layout)
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Reload config with Ctrl-b r
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"  # inline comment
+
+# Switch panes with Alt+arrow (no prefix needed)
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Switch windows with Shift+arrow (no prefix needed)
+bind -n S-Left previous-window
+bind -n S-Right next-window
