feat: Add keyboard shortcuts and neovim setup
- vscode: Add install.sh for global settings (Ghostty as external terminal, Ctrl+Alt+T hotkey)
- osx: Add skhd for system-wide hotkeys (Alt+Return opens Ghostty)
- config/skhd: Add skhdrc configuration
- config/nvim: Add modern neovim config with lazy.nvim, telescope, treesitter, etc.
- vim: Update install.sh to setup neovim, add aliases (v, vi, nv)
- tmux: Change pane navigation from Ctrl+arrow to Alt+arrow (avoid conflicts)

--- a/tmux/config/tmux.conf
+++ b/tmux/config/tmux.conf
@@ -10,12 +10,11 @@ setw -g pane-base-index 1
 # Reload config with Ctrl-b r
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"  # inline comment
 
-# Switch panes with Ctrl+arrow (no prefix needed)
-# Cross-platform: works on Mac, Windows, Linux
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+# Switch panes with Alt+arrow (no prefix needed)
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
 # Switch windows with Shift+arrow (no prefix needed)
 bind -n S-Left previous-window
