feat: enhance Ghostty, tmux, and update documentation
Ghostty config:
- JetBrains Mono font (14pt)
- Catppuccin Mocha color scheme
- Shell integration with cursor/sudo/title features
- Window padding and tab navigation keybindings
- 10K scrollback limit

tmux config:
- Status bar with session name, git branch, time
- Catppuccin-inspired colors
- vi-style copy mode with pbcopy integration
- TPM plugin manager with resurrect/continuum
- Better splits (| and -), true color support
- Add tmux/install.sh for TPM setup

README.md:
- Update workflow description (Ghostty replaces iTerm2)
- Add Key Commands table
- Document Features: terminal stack, hotkey, editors, agents
- Cleaner directory structure overview
- Modernize installation instructions

--- a/tmux/config/tmux.conf
+++ b/tmux/config/tmux.conf
@@ -1,14 +1,44 @@
+# =============================================================================
+# TMUX CONFIGURATION
+# =============================================================================
+# Symlink: ~/.config/tmux/tmux.conf → ~/.dotfiles/tmux/config/tmux.conf
+
+# =============================================================================
+# GENERAL
+# =============================================================================
 # Enable mouse support
 set -g mouse on
 
-# Start windows at 0 (default)
-#set -g base-index 0
-# Start numbering at 1 (matches keyboard layout)
+# True color support
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+# Start windows and panes at 1 (matches keyboard layout)
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Renumber windows when one is closed
+set -g renumber-windows on
+
+# Increase history limit
+set -g history-limit 50000
+
+# Faster command sequences (no delay for escape)
+set -sg escape-time 0
+
+# Enable focus events for vim/neovim
+set -g focus-events on
+
+# =============================================================================
+# KEY BINDINGS
+# =============================================================================
 # Reload config with Ctrl-b r
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"  # inline comment
+bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
+
+# Split panes with | and - (more intuitive)
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Switch panes with Alt+arrow (no prefix needed)
 bind -n M-Left select-pane -L
@@ -19,3 +49,79 @@ bind -n M-Down select-pane -D
 # Switch windows with Shift+arrow (no prefix needed)
 bind -n S-Left previous-window
 bind -n S-Right next-window
+
+# Resize panes with Ctrl+arrow
+bind -n C-S-Left resize-pane -L 2
+bind -n C-S-Right resize-pane -R 2
+bind -n C-S-Up resize-pane -U 2
+bind -n C-S-Down resize-pane -D 2
+
+# =============================================================================
+# COPY MODE (vi-style)
+# =============================================================================
+setw -g mode-keys vi
+
+# Enter copy mode with prefix + [
+# Start selection with v, copy with y
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+
+# Rectangular selection with Ctrl-v
+bind -T copy-mode-vi C-v send -X rectangle-toggle
+
+# Paste with prefix + p
+bind p paste-buffer
+
+# =============================================================================
+# STATUS BAR
+# =============================================================================
+set -g status on
+set -g status-interval 5
+set -g status-position bottom
+
+# Colors (Catppuccin inspired)
+set -g status-style "bg=#1e1e2e,fg=#cdd6f4"
+
+# Left side: session name
+set -g status-left-length 40
+set -g status-left "#[fg=#1e1e2e,bg=#89b4fa,bold] #S #[fg=#89b4fa,bg=#1e1e2e]"
+
+# Right side: git branch, time
+set -g status-right-length 100
+set -g status-right "#[fg=#45475a]│#[fg=#a6e3a1] #{?#{==:#{pane_current_path},},~,#(cd #{pane_current_path} && git branch --show-current 2>/dev/null || echo '○')} #[fg=#45475a]│#[fg=#f9e2af] %H:%M #[fg=#45475a]│#[fg=#cdd6f4] %d %b "
+
+# Window status
+set -g window-status-format "#[fg=#6c7086] #I:#W "
+set -g window-status-current-format "#[fg=#1e1e2e,bg=#cba6f7,bold] #I:#W #[fg=#cba6f7,bg=#1e1e2e]"
+set -g window-status-separator ""
+
+# Pane borders
+set -g pane-border-style "fg=#45475a"
+set -g pane-active-border-style "fg=#89b4fa"
+
+# Message style
+set -g message-style "bg=#89b4fa,fg=#1e1e2e"
+
+# =============================================================================
+# PLUGINS (TPM - Tmux Plugin Manager)
+# =============================================================================
+# Install: git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
+# Install plugins: prefix + I
+# Update plugins: prefix + U
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Resurrect settings (save/restore sessions)
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+
+# Continuum settings (auto-save)
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+
+# Initialize TPM (keep at bottom)
+run '~/.config/tmux/plugins/tpm/tpm'
