--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,25 +1,101 @@
 # Ghostty terminal configuration
 # Symlink: ln -sf ~/.dotfiles/config/ghostty ~/.config/ghostty
 
-# Working directory inheritance
-working-directory = inherit
-window-inherit-working-directory = true
-
-# Font rendering
+# =============================================================================
+# FONT
+# =============================================================================
+font-family = JetBrains Mono
+font-size = 14
 font-thicken = true
+adjust-cell-height = 10%
 
-# Cursor
-cursor-style = bar
+# =============================================================================
+# COLORS (Catppuccin Mocha inspired)
+# =============================================================================
+background = 1e1e2e
+foreground = cdd6f4
 
-# Workflow optimizations
-copy-on-select = true
-mouse-hide-while-typing = true
+# Normal colors
+palette = 0=#45475a
+palette = 1=#f38ba8
+palette = 2=#a6e3a1
+palette = 3=#f9e2af
+palette = 4=#89b4fa
+palette = 5=#f5c2e7
+palette = 6=#94e2d5
+palette = 7=#bac2de
 
-# Allow Option key to work as Alt/Meta for terminal apps
+# Bright colors
+palette = 8=#585b70
+palette = 9=#f38ba8
+palette = 10=#a6e3a1
+palette = 11=#f9e2af
+palette = 12=#89b4fa
+palette = 13=#f5c2e7
+palette = 14=#94e2d5
+palette = 15=#a6adc8
+
+# Cursor colors
+cursor-color = f5e0dc
+cursor-text = 1e1e2e
+
+# Selection
+selection-background = 45475a
+selection-foreground = cdd6f4
+
+# =============================================================================
+# WINDOW
+# =============================================================================
+window-padding-x = 8
+window-padding-y = 4
+window-padding-balance = true
+window-decoration = true
+window-inherit-working-directory = true
+working-directory = inherit
+
+# macOS specific
+macos-titlebar-style = tabs
 macos-option-as-alt = true
 
+# =============================================================================
+# CURSOR
+# =============================================================================
+cursor-style = bar
+cursor-style-blink = false
+
+# =============================================================================
+# BEHAVIOR
+# =============================================================================
+copy-on-select = true
+mouse-hide-while-typing = true
+confirm-close-surface = false
+scrollback-limit = 10000
+
+# Shell integration (automatic with bash/zsh/fish)
+shell-integration = detect
+shell-integration-features = cursor,sudo,title
+
+# =============================================================================
+# KEYBINDINGS
+# =============================================================================
 # Unbind Alt+arrow so tmux can use them for pane switching
 keybind = alt+left=unbind
 keybind = alt+right=unbind
 keybind = alt+up=unbind
 keybind = alt+down=unbind
+
+# Quick actions
+keybind = super+k=clear_screen
+keybind = super+shift+enter=new_window
+
+# Font size
+keybind = super+plus=increase_font_size:1
+keybind = super+minus=decrease_font_size:1
+keybind = super+zero=reset_font_size
+
+# Tab navigation (Cmd+number)
+keybind = super+one=goto_tab:1
+keybind = super+two=goto_tab:2
+keybind = super+three=goto_tab:3
+keybind = super+four=goto_tab:4
+keybind = super+five=goto_tab:5
