Replace hotkey daemon with Ghostty native global keybinding
- Remove Python pynput-based hotkey daemon
- Add global:alt+enter=toggle_quick_terminal to Ghostty config
- Fix noclobber issue in bash with >| operator
- Clean up osx/install.sh hotkey section

Alt+Enter now handled natively by Ghostty, no Accessibility
permission issues with uv/Python on macOS 26.

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -78,6 +78,9 @@ shell-integration-features = cursor,sudo,title
 # =============================================================================
 # KEYBINDINGS
 # =============================================================================
+# Global hotkey to summon Ghostty from anywhere (Alt+Enter)
+keybind = global:alt+enter=toggle_quick_terminal
+
 # Unbind Alt+arrow so tmux can use them for pane switching
 keybind = alt+left=unbind
 keybind = alt+right=unbind
