last tmux stuff

--- a/tmux/config/tmux.conf
+++ b/tmux/config/tmux.conf
@@ -114,6 +114,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Yank settings (copy to system clipboard)
+set -g @yank_selection_mouse 'clipboard'
 
 # Resurrect settings (save/restore sessions)
 set -g @resurrect-capture-pane-contents 'on'
