some minor issues

--- a/tmux/config/tmux.conf
+++ b/tmux/config/tmux.conf
@@ -67,11 +67,22 @@ setw -g mode-keys vi
 # Enter copy mode with prefix + [
 # Start selection with v, copy with y
 bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Y send -X copy-end-of-line
 bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # Rectangular selection with Ctrl-v
 bind -T copy-mode-vi C-v send -X rectangle-toggle
+
+# More vim-like navigation and selection
+bind -T copy-mode-vi H send -X start-of-line
+bind -T copy-mode-vi L send -X end-of-line
+bind -T copy-mode-vi Escape send -X cancel
+
+# Incremental search like vim
+bind -T copy-mode-vi / command-prompt -i -p "(search down)" "send -X search-forward-incremental \"%%%\""
+bind -T copy-mode-vi ? command-prompt -i -p "(search up)" "send -X search-backward-incremental \"%%%\""
 
 # Paste with prefix + p
 bind p paste-buffer
