--- a/config/glow/glow.yml
+++ b/config/glow/glow.yml
@@ -1,7 +1,7 @@
 # style name or JSON path (default "auto")
 style: "auto"
 # mouse support (TUI-mode only)
-mouse: false
+mouse: true
 # use pager to display markdown
 pager: false
 # word-wrap at width
