--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ AGENTS.md
 # Neovim plugin lock file
 nvim/config/lazy-lock.json
 __pycache__/
+
+# Test virtual environment
+.venv/
+venv/
+__pycache__/
+*.pyc
+.pytest_cache/
+*.egg-info/
